Update Authors and readme

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 # This file lists all individuals having contributed content to the repository.
 
 Arturo Victoria Rincon <arturo.victoria-rincon@holbertonschool.com>
-Juan Felipe BUitrago <juan.buitrago@holbertonschool.com>
+Juan Felipe Buitrago <juan.buitrago@holbertonschool.com>
+Jhonatan Arenas <jhonatan.arenas@holbertonschool.com>
